--- a/templates/game_name.html
+++ b/templates/game_name.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./game_name.css">
     <title>Document</title>
 </head>
 <body>
